force-app/main/default/objects/Borrower_Snapshot__c/Borrower_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Borrower Snapshot</label>
    <pluralLabel>Borrower Snapshots</pluralLabel>
    <nameField>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
        <displayFormat>BS-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Point-in-time borrower financial data used for replay evaluation. Typed fields per fact category, not EAV. Replaces old Reconstructed_Fact__c.</description>
</CustomObject>