force-app/main/default/objects/Borrower_Snapshot__c/fields/Address_Tenure_Months__c.field-meta.xml
<CustomField>
    <fullName>Address_Tenure_Months__c</fullName>
    <label>Address Tenure Months</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Months at current address</description>
</CustomField>