force-app/main/default/objects/Borrower_Snapshot__c/fields/Audit_Case__c.field-meta.xml
<CustomField>
    <fullName>Audit_Case__c</fullName>
    <label>Audit Case</label>
    <type>Lookup</type>
    <referenceTo>Audit_Case__c</referenceTo>
    <relationshipName>Borrower_Snapshots</relationshipName>
    <relationshipLabel>Borrower Snapshots</relationshipLabel>
    <required>true</required>
    <description>Parent audit case</description>
</CustomField>