force-app/main/default/objects/Borrower_Snapshot__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Extraction/reconstruction confidence</description>
</CustomField>