force-app/main/default/objects/Borrower_Snapshot__c/fields/DTI_At_Approval__c.field-meta.xml
<CustomField>
    <fullName>DTI_At_Approval__c</fullName>
    <description>Debt-to-income ratio at time of original loan approval</description>
    <label>DTI at Approval</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>