force-app/main/default/objects/Borrower_Snapshot__c/fields/DTI_Ratio__c.field-meta.xml
<CustomField>
    <fullName>DTI_Ratio__c</fullName>
    <label>DTI Ratio</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Debt-to-income ratio</description>
</CustomField>