force-app/main/default/objects/Borrower_Snapshot__c/fields/Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name__c</fullName>
    <label>Employer Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Current employer name</description>
</CustomField>