force-app/main/default/objects/Borrower_Snapshot__c/fields/Employment_Months__c.field-meta.xml
<CustomField>
    <fullName>Employment_Months__c</fullName>
    <label>Employment Months</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Months at current employer</description>
</CustomField>