force-app/main/default/objects/Borrower_Snapshot__c/fields/Evidence_Item__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Item__c</fullName>
    <label>Evidence Item</label>
    <type>Lookup</type>
    <referenceTo>Evidence_Item__c</referenceTo>
    <relationshipName>Borrower_Snapshots</relationshipName>
    <relationshipLabel>Borrower Snapshots</relationshipLabel>
    <description>Source evidence document</description>
</CustomField>