force-app/main/default/objects/Borrower_Snapshot__c/fields/Extractor_Version__c.field-meta.xml
<CustomField>
    <fullName>Extractor_Version__c</fullName>
    <label>Extractor Version</label>
    <type>Text</type>
    <length>50</length>
    <description>Version of extraction tool used</description>
</CustomField>