force-app/main/default/objects/Borrower_Snapshot__c/fields/Fact_Category__c.field-meta.xml
<CustomField>
    <fullName>Fact_Category__c</fullName>
    <label>Fact Category</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Category of fact</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Income</fullName><default>false</default><label>Income</label></value>
            <value><fullName>Employment</fullName><default>false</default><label>Employment</label></value>
            <value><fullName>Asset</fullName><default>false</default><label>Asset</label></value>
            <value><fullName>Credit</fullName><default>false</default><label>Credit</label></value>
            <value><fullName>Identity</fullName><default>false</default><label>Identity</label></value>
            <value><fullName>Residency</fullName><default>false</default><label>Residency</label></value>
            <value><fullName>Debt</fullName><default>false</default><label>Debt</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>