force-app/main/default/objects/Borrower_Snapshot__c/fields/FICO_Score__c.field-meta.xml
<CustomField>
    <fullName>FICO_Score__c</fullName>
    <label>FICO Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Credit score (300-850)</description>
</CustomField>