force-app/main/default/objects/Borrower_Snapshot__c/fields/Is_Unverifiable__c.field-meta.xml
<CustomField>
    <fullName>Is_Unverifiable__c</fullName>
    <label>Is Unverifiable</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether the fact could not be verified</description>
</CustomField>