force-app/main/default/objects/Borrower_Snapshot__c/fields/LTV_Ratio__c.field-meta.xml
<CustomField>
    <fullName>LTV_Ratio__c</fullName>
    <label>LTV Ratio</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>4</scale>
    <description>Loan-to-value ratio</description>
</CustomField>