force-app/main/default/objects/Borrower_Snapshot__c/fields/Monthly_Debt__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Debt__c</fullName>
    <label>Monthly Debt</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Total monthly debt obligations</description>
</CustomField>