force-app/main/default/objects/Borrower_Snapshot__c/fields/Unverifiable_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unverifiable_Reason__c</fullName>
    <label>Unverifiable Reason</label>
    <type>Text</type>
    <length>255</length>
    <description>Explanation if unverifiable</description>
</CustomField>