force-app/main/default/objects/Borrower_Snapshot__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <label>Verified</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether auditor has verified this snapshot</description>
</CustomField>