force-app/main/default/objects/Borrower_Snapshot__c/fields/Verified_At__c.field-meta.xml
<CustomField>
    <fullName>Verified_At__c</fullName>
    <label>Verified At</label>
    <type>DateTime</type>
    <description>When verification occurred</description>
</CustomField>