force-app/main/default/objects/Borrower_Snapshot__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <label>Verified By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Verified_Snapshots</relationshipName>
    <relationshipLabel>Verified Snapshots</relationshipLabel>
    <description>Who verified</description>
</CustomField>